--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
-    <script src="/assets/js/app.js" type="text/javascript"></script>
     <!--CSS Style Sheet-->
     {{!-- <link rel="stylesheet" href="/assets/css/style.css" type="text/css" /> --}}
 
@@ -43,5 +42,81 @@
 
     <!--External JS Link-->
 </body>
+<script>
+    //Handle Scrape button
+$("#scrape").on("click", function() {
+  $.ajax({
+      method: "GET",
+      url: "/scrape",
+  }).done(function(data) {
+      console.log(data)
+      window.location = "/"
+  })
+});
 
+//Set clicked nav option to active
+$(".navbar-nav li").click(function() {
+ $(".navbar-nav li").removeClass("active");
+ $(this).addClass("active");
+});
+
+//Handle Save Article button
+$(".save").on("click", function() {
+  var thisId = $(this).attr("data-id");
+  $.ajax({
+      method: "POST",
+      url: "/articles/save/" + thisId
+  }).done(function(data) {
+      window.location = "/"
+  })
+});
+
+//Handle Delete Article button
+$(".delete").on("click", function() {
+  var thisId = $(this).attr("data-id");
+  $.ajax({
+      method: "POST",
+      url: "/articles/delete/" + thisId
+  }).done(function(data) {
+      window.location = "/saved"
+  })
+});
+
+//Handle Save Note button
+$(".saveNote").on("click", function() {
+  var thisId = $(this).attr("data-id");
+  if (!$("#noteText" + thisId).val()) {
+      alert("please enter a note to save")
+  }else {
+    $.ajax({
+          method: "POST",
+          url: "/notes/save/" + thisId,
+          data: {
+            text: $("#noteText" + thisId).val()
+          }
+        }).done(function(data) {
+            // Log the response
+            console.log(data);
+            // Empty the notes section
+            $("#noteText" + thisId).val("");
+            $(".modalNote").modal("hide");
+            window.location = "/saved"
+        });
+  }
+});
+
+//Handle Delete Note button
+$(".deleteNote").on("click", function() {
+  var noteId = $(this).attr("data-note-id");
+  var articleId = $(this).attr("data-article-id");
+  $.ajax({
+      method: "DELETE",
+      url: "/notes/delete/" + noteId + "/" + articleId
+  }).done(function(data) {
+      console.log(data)
+      $(".modalNote").modal("hide");
+      window.location = "/saved"
+  })
+});
+</script>
 </html>
