--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -16,7 +16,7 @@
                 </div>
                 <div class="panel-body">
                     <p>{{this.summary}}</p>
-                    <a href='https://www.espn.com{{this.link}}' target="_blank">See Full Story</a>
+                    <a href={{this.link}} target="_blank">See Full Story</a>
                     <br><br>
                     <button type="button" class="btn btn-success save" data-id={{this._id}}>Save Article</button>
                 </div>
