--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -14,9 +14,9 @@
                     </div>
                     <div class="panel-body">
                         <p> {{this.summary}}</p>
-                        <a href={{this.link}} target="_blank">{{this.link}}</a>
+                        <a href={{this.link}} target="_blank">Vist Article</a>
                         <br><br>
-                        <button type="button" class="btn btn-success addNote" data-toggle="modal" data-target="#noteModal{{this._id}}" data-id={{this._id}}>View/Add Notes</button>
+                        <button type="button" class="btn btn-success addNote" data-toggle="modal" data-target="#commentModal{{this._id}}" data-id={{this._id}}>View/Add Notes</button>
                         <button type="button" class="btn btn-danger delete" data-id={{this._id}}>Delete</button>
                     </div>
                 </div>
