--- a/views/layouts/partials/comments-modal.handlebars
+++ b/views/layouts/partials/comments-modal.handlebars
@@ -1,5 +1,6 @@
 <!-- Modal -->
-<div class="modal fade" id="commentModal{{this._id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade" id="commentModal{{this._id}}" tabindex="-1" role="dialog"
+  aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -10,10 +11,19 @@
         </button>
       </div>
       <div class="modal-body">
-          <form>
-              <textarea name="input" id="commentInput" class="form-control"  rows="5"></textarea>
-          </form>
-          {{this.comment}}
+        <form>
+          <textarea name="input" id="commentInput" class="form-control" rows="5"></textarea>
+        </form>
+        {{#if this.comments}}
+        {{#each this.comments}}
+        <p>{{this.body}}</p>
+        {{/each}}
+        {{else}}
+        <br>
+        <div class="text-center">
+          <p>Be The First to Comment</p>
+        </div>
+        {{/if}}
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-success saveComment">Save changes</button>
