formatting and db

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
 
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
+        <div class="container" id="nav">
             <div class="row">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="/">
@@ -33,8 +33,8 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/">Home</a></li>
                         <li><a href="/saved">Saved Articles</a></li>
-                        <li> <button type="button" class="btn btn-primary" id="scrape">Scrape
-                                Articles</button></li>
+                        <li><button class="btn btn-primary btn-sm" id="scrape">Scrape the Web!</button></li>
+
                     </ul>
                 </div>
             </div>
@@ -44,85 +44,4 @@
 
 </body>
 <script src="./js/app.js"></script>
-<script>
-        //Handle Scrape button
-    $("#scrape").on("click", function () {
-        $.ajax({
-            method: "GET",
-            url: "/scrape",
-        }).done(function (data) {
-            console.log(data)
-            window.location = "/"
-        })
-    });
-
-    //Set clicked nav option to active
-    $(".navbar-nav li").click(function () {
-        $(".navbar-nav li").removeClass("active");
-        $(this).addClass("active");
-    });
-
-    //Handle Save Article button
-    $(".save").on("click", function () {
-        var thisId = $(this).attr("data-id");
-        alert("Article Saved!")
-        $.ajax({
-            method: "POST",
-            url: "/articles/save/" + thisId
-        }).done(function (data) {
-            window.location = "/"
-        })
-    });
-
-    //Handle Delete Article button
-    $(".delete").on("click", function () {
-        var thisId = $(this).attr("data-id");
-        $.ajax({
-            method: "POST",
-            url: "/articles/delete/" + thisId
-        }).done(function (data) {
-            window.location = "/saved"
-        })
-    });
-
-    //Handle Save comment button
-    $(".saveComment").on("click", function () {
-        var thisId = $(this).attr("data-id");
-        if (!$("#commentInput").val()) {
-            alert("please enter a comment to save")
-        } else {
-            console.log($("#commentInput").val())
-            $.ajax({
-                method: "POST",
-                url: "/comments/" + thisId,
-                data: {
-                    body: $("#commentInput").val()
-                }
-            }).done(function (data) {
-                // Log the response
-                console.log(data);
-                // Empty the notes section
-                $("#noteText" + thisId).val("");
-                $(".modalNote").modal("hide");
-                window.location = "/saved"
-            });
-        }
-    });
-
-
-    //Handle Delete Note button
-    $(".deleteNote").on("click", function () {
-        var noteId = $(this).attr("data-note-id");
-        var articleId = $(this).attr("data-article-id");
-        $.ajax({
-            method: "DELETE",
-            url: "/notes/delete/" + noteId + "/" + articleId
-        }).done(function (data) {
-            console.log(data)
-            $(".modalNote").modal("hide");
-            window.location = "/saved"
-        })
-    });
-
-</script>
 </html>
